--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4",
+    "react-table": "^6.8.0",
     "redux": "^3.7.2",
     "vexdb": "^0.5.21"
   },
