--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0"
+    "babel-core": "^6.26.0",
+    "sass-loader": "^7.0.1"
   }
 }
